# TheRayTracerChallengeCpp

./: .clang-format  CMakeLists.txt  README.md  appveyor.yml
apps/: CMakeLists.txt  chapter1.cpp  chapter2.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp
cmake/: CompilerOptions.cmake
rtc/: CMakeLists.txt
rtc/include/rtc/: algorithm.hpp  camera.hpp  canvas.hpp  intersections.hpp  lights.hpp  materials.hpp  math.hpp  matrices.hpp  ray.hpp  shape.hpp  sphere.hpp  transformations.hpp  tuple.hpp  world.hpp
rtc/src/: canvas.cpp
test/: CMakeLists.txt
test/features/: camera.cpp  canvas.cpp  intersections.cpp  lights.cpp  materials.cpp  math.cpp  matrices.cpp  rays.cpp  shapes.cpp  spheres.cpp  transformations.cpp  tuples.cpp  world.cpp
